2008-11-06  Vlad Seryakov <seryakov@users.sf.net>

	tcl/fastpath.tcl: Check for 0.0.0.0 address in nssock and
        generate urls using Host: header instead

2008-10-29  Vlad Seryakov <seryakov@users.sf.net>

	configure.in: Change version to 4.99.3 to distinguish between incompatible versions

2008-10-22  Vlad Seryakov <seryakov@users.sf.net>

	include/ns.h:
	nsd/conn.c: Removed public functions Ns_connSockContext and Ns_ConnDriverContext.
        Ns_Sock already has all pointers.

	nsd/driver.c: Fixed bug with status code in SockAccept where it's been set 
        and then compared for other values

	modules/nsssl.c: Fixed bug with checking not-NULL pointer for NULL

2008-10-21  Vlad Seryakov <seryakov@users.sf.net>

        include/ns: Made all definitions using the same format

        nsd/return.c: Ns_ConnSetRequiredHeaders is broken, moved to Deperecated status

        nsd/conn.c: Added new public function Ns_ConnContentSize for cases when
        Ns_ConnContent returns binary data

        modules/nsphp: Updated to latest API, supports streaming and does not use
        deperecated functions anymore

        modules/nstftpd: ported to new driver API

        modules/nsssl: Ported to new API

        nsd/conn.c: Added new Ns_ConnSockContext function which returns sock->arg,
        socket-wide context

        Ns_ConnDriverContext will now return connPtr->drvPtr->arg, this is driver-wide
        context.

        include/ns.h: Added one more accpetd status NS_DRIVER_ACCPET_QUEUE which tells to
        queue accepted socket without any condition. Empty request struct is allocated to
        keep server from crashing.

2008-10-19  Vlad Seryakov <seryakov@users.sf.net>

	nsd/conn.c: Fixed bug in ns_conn content, it returned as string and did not
	handle binary content, now result is byte array

	include/ns.h:
	nsd/nsd.h:
	nsd/queue.c:
	nsd/driver.c:
	nsd/op.c:
	nsd/filter.c:
	nsd/urlspace.c: Changed to handle non HTTP drivers differently, driver now has